# shader_practice

./: CMakeLists.txt
Resource/Model/StandfordDragon/: stanford-dragon.gltf
Resource/Shader/CubePractice/: light_cube.fp  materials.fp
Resource/Shader/phong/: phong.fp  phong.vp
Resource/Shader/skybox/: skybox.fp  skybox.vp
Resource/Shader/ssao/: geometry.fp  geometry.vp  light.fp  shadow.fp  shadow.vp
include/glad/: glad.h
include/header/: Camera.cpp  Camera.h  GLTFModel.cpp  GLTFModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Shader_m.h  Shader_s.h
src/: glad.c  main.cpp
src/header/: Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
src/tools/: ActionListener.cpp  ActionListener.h
